@@ -25,7 +25,6 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Role::FileGatherer" => 0,
     "Dist::Zilla::Role::FileMunger" => 0,
     "Dist::Zilla::Role::MetaProvider" => 0,
-    "Dist::Zilla::Util::ConfigDumper" => 0,
     "JSON::MaybeXS" => 0,
     "Module::Data" => 0,
     "Module::Runtime" => 0,
@@ -60,7 +59,6 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Role::FileGatherer" => 0,
   "Dist::Zilla::Role::FileMunger" => 0,
   "Dist::Zilla::Role::MetaProvider" => 0,
-  "Dist::Zilla::Util::ConfigDumper" => 0,
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
   "JSON::MaybeXS" => 0,
