@@ -18,6 +18,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Removed / develop requires]
  - Dist::Zilla::Plugin::MetaYAML
 
+ [Removed / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
+
  [Removed / test requires]
  - Dist::Zilla::Util::Test::KENTNL 1.003001
 
