@@ -2,10 +2,12 @@
 
 {{$NEXT}}
  - Removed DZTest stuff.
+ - Removed use of Util::ConfigDumper
 
  [Dependencies::Stats]
  - Dependencies changed since 1.004002, see misc/*.deps* for details
  - develop: +5 ↑1 -1 (suggests: ↑2)
+ - runtime: -1
  - test: -1
 
 1.004002 2015-03-06T23:08:04Z 81ea208
